k8s/overlays/dev/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: timescaledb-netpol
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: timescaledb
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: hetida-platform-app
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9187
    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: timescaledb
      ports:
        - protocol: TCP
          port: 5432
  egress:
    - to:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: timescaledb
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: minio-system
      ports:
        - protocol: TCP
          port: 9000
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
